integrates\fix(front): #2324 use horizontal scroll
- Closes #2324


Former-commit-id: 8d1d16c32d95df81b94b5e61f5a3f29ea6abcb1d

--- a/front/src/components/DataTableNext/index.css
+++ b/front/src/components/DataTableNext/index.css
@@ -1,3 +1,7 @@
+:local .tableWrapper {
+  overflow-x: auto;
+}
+
 :local .tableHeader > th, .tableBody > td {
   overflow: hidden;
   text-overflow: ellipsis;
